; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_set_obj.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_set_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBS_DATA_OBJECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32**, i8*, i32*, i32 (i32*, i32**, i8*, i32**, i32, i32)*)* @obs_set_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @obs_set_obj(i32* %0, i32** %1, i8* %2, i32* %3, i32 (i32*, i32**, i8*, i32**, i32, i32)* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32 (i32*, i32**, i8*, i32**, i32, i32)*, align 8
  store i32* %0, i32** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 (i32*, i32**, i8*, i32**, i32, i32)* %4, i32 (i32*, i32**, i8*, i32**, i32, i32)** %10, align 8
  %11 = load i32 (i32*, i32**, i8*, i32**, i32, i32)*, i32 (i32*, i32**, i8*, i32**, i32, i32)** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32**, i32*** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* @OBS_DATA_OBJECT, align 4
  %16 = call i32 %11(i32* %12, i32** %13, i8* %14, i32** %9, i32 8, i32 %15)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
